lib/hemingway/block/verbatim/verbatim.treetop
require "hemingway/block/verbatim/verbatim"

module Hemingway
  module Block
    grammar Verbatim

      rule verbatim
        verbatim_text
      end

      rule verbatim_type
        "verbatim" <VerbatimNode>
      end

      rule verbatim_text
        ( !escape . )+ <TextNode>
      end

    end
  end
end
